updated text,added links, fix layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,6 +155,9 @@ input, select, textarea {
 		font-size: 1.35em;
 		line-height: 1.5em;
 	}
+	.table.kids h3{
+		text-align: center;
+	}
 
 	h4 {
 		font-size: 1.1em;
@@ -1938,6 +1941,10 @@ input, select, textarea {
 
 		@media screen and (max-width: 480px) {
 
+			.kidsGallery{
+				width: 100%;
+			}
+
 			.row {
 				display: flex;
 				flex-wrap: wrap;
@@ -2627,6 +2634,10 @@ input, select, textarea {
 			border-radius: 1rem;
 		}
 
+		@media screen {
+			
+		}
+
 		/* .swiper {
 			width:100%;
 			margin: 0;
@@ -2846,7 +2857,7 @@ input, select, textarea {
 					.kids{
 						display: flex;
 						width: 100%;
-						font-size: 2em;
+						/* font-size: 2em; */
 					}
 					.kids>ul>li{
 						list-style:none ;
